# mol-lang

./: .dockerignore  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LANGUAGE_SPEC.md  LICENSE  MEDIUM_POST.md  MOL_DATASHEET.tex  MOL_DOCUMENTATION.md  README.md  ROADMAP.md  SECURITY.md  STRATEGY.md  build_dist.py  deploy.sh  docker-entrypoint.sh  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
DISCORD_SETUP/: index.html
assets/: demo.cast
blog/: benchmark_launch_posts.md  medium_v030_launch.md  medium_v1_launch.md  social_posts.md  v1_launch_campaign.md
changelog/: index.html
codebase/: mol.pkg.json
contributing/: index.html
daa_project/: 00_algoverse_main.mol  01_sorting_arena.mol  02_graph_algorithms.mol  03_dynamic_programming.mol  04_dc_vs_greedy.mol  05_complexity_analyzer.mol  README.md
docs/: DISCORD_SETUP.md  changelog.md  contributing.md  faq.md  index.md  use-cases.md  why-mol.md
examples/: 01_hello.mol  02_domain_types.mol  03_advanced.mol  04_neural_sim.mol  05_safety_test.mol  06_comprehensive.mol  07_pipeline.mol  08_rag_pipeline.mol  09_benchmark.mol  10_data_processing.mol  11_functional.mol  12_rag_workflow.mol  13_math_stats_hash.mol  14_llm_integration.mol  15_packages.mol  16_browser.mol  17_power_features.mol  18_concurrency.mol  19_structs_modules.mol  20_vector_engine.mol  21_encryption.mol  22_memory_safety.mol  23_jit_tracing.mol  24_swarm_runtime.mol  25_sovereign_pipeline.mol  demo.mol  derag_crypto.mol  domain_api_backend.mol  domain_data_pipeline.mol  domain_log_analysis.mol  nk_agents.mol  showcase_chatbot.mol  showcase_pipeline.mol  showcase_todo.mol  sovereign_demo.mol
faq/: index.html
mol/: __init__.py  ast_nodes.py  borrow_checker.py  cli.py  ecosystem.py  encryption.py  grammar.lark  interpreter.py  jit_tracer.py  lsp_server.py  package_manager.py  parser.py  runtime.js  stdlib.py  swarm_runtime.py  transpiler.py  types.py  vector_engine.py  wasm_builder.py
mol-vscode/: language-configuration.json  package-lock.json  package.json
(+110 files in other folders)
