[project]
name = "mol-lang"
version = "0.4.0"
description = "MOL — The Cognitive Programming Language with auto-tracing pipelines"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Mounesh Kodi", email = "kaliyugiheart@gmail.com"},
]
keywords = ["programming-language", "pipeline", "ai", "rag", "cognitive", "dsl", "mol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "lark>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/crux-ecosystem/mol-lang"
Repository = "https://github.com/crux-ecosystem/mol-lang"
Playground = "http://135.235.138.217:8000"
Changelog = "https://github.com/crux-ecosystem/MOL/blob/main/CHANGELOG.md"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
mol = "mol.cli:main"

[project.optional-dependencies]
lsp = [
    "pygls>=2.0",
    "lsprotocol>=2024.0.0",
]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mol*"]

[tool.setuptools.package-data]
mol = ["grammar.lark"]
